fix wrap on iPad

--- a/css/style.css
+++ b/css/style.css
@@ -76,7 +76,7 @@ div.content {
   padding: 0;
 }
 div.definition {
-  padding:40px 120px 35px;
+  padding:40px 120px 35px 0;
   float:left;
 }
 
